--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,55 @@
-<p>
-  cart works!
-</p>
+<h1>
+  Shopping Cart
+</h1>
+<ng-container *ngIf="cart$ | async as cart">
+  <p>
+    You have <strong>{{ cart.totalItemsCount }}</strong> items in your shopping cart.
+  </p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th style="width: 30%">Product</th>
+        <th class="text-center" style="width: 30%">Quantity</th>
+        <th class="text-center" style="width: 20%">Price</th>
+        <th class="text-right" style="width: 20">Subtotal</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of cart.items">
+        <td>
+          <div [style.backgroundImage]="'url('+item.imageUrl+')'" class="thumbnail"></div>
+        </td>
+        <td>
+          {{ item.title }}
+        </td>
+        <td>
+          <product-quantity [product]="item" [cart]="cart"></product-quantity>
+        </td>
+        <td class="text-center">
+          {{ item.price | currency:'HKD':true }}
+        </td>
+        <td class="text-right">
+          {{ item.subtotal | currency:'HKD':true }}
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th class="text-right">{{ cart.totalPrice | currency:'HKD':true }}</th>
+      </tr>
+    </tfoot>
+  </table>
+  <div class="row">
+    <div class="col">
+        <button *ngIf="cart.items.length" (click)="clearCart()" class="btn btn-danger btn-sm">Clear All</button>
+    </div>
+    <div class="col text-right">
+        <a *ngIf="cart.items.length" routerLink="/checkout" class="btn btn-success btn-sm">Checkout</a>
+    </div>
+  </div>
+</ng-container>
