--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,18 @@
-<p>
-  products works!
-</p>
+<div class="row">
+  <div class="col-3">
+    <product-filter [category]="category" [filteredProductsPriceRange]="filteredProductsPriceRange"></product-filter>
+  </div>
+  <div class="col">
+    <div class="row" *ngIf="cart$ | async as cart">
+      <div class="col" *ngIf="filteredProducts.length === 0">
+        Nothing here
+      </div>
+      <ng-container *ngFor="let p of filteredProducts; let i = index">
+        <div class="col">
+          <product-card [product]="p" [cart]="cart"></product-card>
+        </div>
+        <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
+      </ng-container>
+    </div>
+  </div>
+</div>
